<resources>
    <string name="app_name">Dr smart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome \nBack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="skin_disease_diagnose">Skin Disease Diagnose</string>
    <string name="lung_disease_diagnose">Lung Disease Diagnose</string>
    <string name="oily_skin_layers">OILY SKIN LAYERS</string>
    <string name="read_about_disease">Read About Disease</string>
    <string name="find_out_the_disease">Find out The disease</string>
    <string name="healthy_lung">Healthy Lung</string>
    <string name="show_me_n_your_skin_to_find_n_the_disease">Show me\nYour skin to find\nThe Disease</string>
    <string name="upload">Upload</string>
    <string name="take">Take</string>
    <string name="you_have_been_diagnosed_nwith">You have been diagnosed\nwith</string>
    <string name="find_a_doctor">Find a Doctor</string>
    <string name="more_info">More Info</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="logout">Logout</string>
    <string name="patient">PATIENT</string>
    <string name="doctor">DOCTOR</string>
    <string name="please_choose_who_you_are">Please Choose Who You Are</string>
    <string name="hello_dr">Hello Dr !</string>
    <string name="no_comments">No comments</string>
    <string name="answer_question">Answer question...</string>
    <string name="questions">Questions</string>
    <string name="server_error">server_error</string>
    <string name="solved_question">Solved Question ?</string>
    <string name="no">No</string>
    <string name="solved_question_desc">"Are you sure you want to end this discussion? "</string>
    <string name="yes">Yes</string>
    <string name="no_questions">No Question !</string>
    <string name="my_questions">My questions</string>
    <string name="start_asking">Start asking doctors using + button below !</string>
    <string name="explain_condition">Explain Your condition ?</string>
    <string name="select_photo">Select photo</string>
    <string name="we_will_send_your_question_to_specialized_doctor">We will send your question to specialized doctor</string>
    <string name="have_a_question_ask_a_doctor">Have a question ? ask a doctor !</string>
    <string name="show_me_your_x_ray">Show me your x-ray to find disease</string>
    <string name="start_adding_questions">Start add a question by using add + button</string>
    <string name="answered_question">Answered Question !</string>
    <string name="thanks_dr">Thanks dr !</string>
    <string name="ask">Ask</string>
    <string name="we_lost_connection">We lost connection with our servers :(</string>
</resources>